--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<html>
+  <head>
+    <title>Pedraliz Resume on GitHub.io</title>
+  </head>
+  <body>
+    <h1>Pedram Gholizadeh</h1>
+  </body>
+</html>
